SF Primes/src/objects/Potluck_Attendee__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Potluck Attendee</description>
        <label>Name</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.ProfileId</field>
                <operation>equals</operation>
                <value>00ec0000000E1Hu</value>
            </filterItems>
            <filterItems>
                <field>User.ProfileId</field>
                <operation>equals</operation>
                <value>00e40000000rAoY</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Potluck_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vegeterian__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is Vegeterian?</description>
        <label>Vegeterian</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <inlineHelpText>If you can come by vehicle , please select the type</inlineHelpText>
        <label>Vehicle Type</label>
        <picklist>
            <picklistValues>
                <fullName>2-Wheeler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-Wheeler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-Wheeler</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Potluck Attendee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Vegeterian__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>Vehicle__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PAN - {0000}</displayFormat>
        <label>Potluck Attendee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Potluck Attendees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>